[package]
name = "during"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A utility to run a command only during certain times of day"
repository = "https://github.com/djmarcin/during"
documentation = "https://github.com/djmarcin/during"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
libc = "0.2.153"
regex = "1.10.3"
